fix: layout issue

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -20,7 +20,7 @@
   margin-top: 4rem;
   z-index: 10;
   img {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
   }
   h1 {
     font-size: var(--font-size-lg);
